--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -54,6 +54,7 @@
 			aglite.Mobile.setContentHeight(page);
 			aglite.Mobile.EventManager.fire("pageshow",[page]);
 			AgClinicalMobileUtil.attachOptionWindow(page)
+			aglite.Mobile.OffLine.clearFoot();
 		});
 		$ ( document ).bind('pageloaderror', aglite.Mobile.handleError);
 		aglite.Mobile.hideWindows();
@@ -96,10 +97,10 @@
 		<div style="text-align: center;float:left;position:absolute;top:2px;">
 			<a href="./home.html" data-ajax="false"><img title="Home" id="agl-mobile-home" class="agl-mobile-home" src="../images/s.gif"/></a>
 		</div>
-		<div data-role="navbar" data-theme="a">
+		<div data-role="navbar">
 			<ul>
-				<li><a class="ui-btn-active ui-state-persist">Subject Chart</a></li>
-				<li><a href="./dashboard-b.html" data-ajax="false">Downloaded Site Details</a></li>
+				<li><a class="ui-btn-active ui-state-persist" data-theme="d">Subject Chart</a></li>
+				<li><a href="./dashboard-b.html" data-ajax="false" data-theme="d">Downloaded Sites</a></li>
 			</ul>
 		</div>
 		
