--- a/pages/dashboard-b.html
+++ b/pages/dashboard-b.html
@@ -88,8 +88,8 @@
 		</div>
 		<div data-role="navbar" data-theme="a">
 			<ul>
-				<li><a href="./dashboard.html" data-ajax="false" data-theme="d">Subject Chart</a></li>
-				<li><a class="ui-btn-active ui-state-persist" data-theme="d">Downloaded Sites</a></li>
+				<li><a class="ui-btn-active ui-state-persist" href="./dashboard.html" data-ajax="false" data-theme="d">Subject Chart</a></li>
+				<li><a data-theme="d">Downloaded Sites</a></li>
 			</ul>
 		</div>
 	</div>
