--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -99,8 +99,8 @@
 		</div>
 		<div data-role="navbar">
 			<ul>
-				<li><a class="ui-btn-active ui-state-persist" data-theme="d">Subject Chart</a></li>
-				<li><a href="./dashboard-b.html" data-ajax="false" data-theme="d">Downloaded Sites</a></li>
+				<li><a data-theme="d">Subject Chart</a></li>
+				<li><a class="ui-btn-active ui-state-persist" href="./dashboard-b.html" data-ajax="false" data-theme="d">Downloaded Sites</a></li>
 			</ul>
 		</div>
 		
