--- a/pages/editsite.html
+++ b/pages/editsite.html
@@ -114,7 +114,7 @@
 				</tr>
 				<tr>
 					<td class="form-label">Site Title</td>
-					<td class="form-field-val"><input type="text" name="name" id="siteTitle" value="" data-mini="true" /></td>
+					<td class="form-field-val"><div data-role="fieldcontain"><input type="text" name="name" id="siteTitle" value="" data-mini="true" /></div></td>
 				</tr>
 				<tr>
 					<td class="form-label">Site Description</td>
