--- a/pages/settings.html
+++ b/pages/settings.html
@@ -112,15 +112,15 @@
 		<center>
 			<table width= "90%" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 				<tr>
-					<td class="form-label">Clinical Version</td>
-					<td class="form-field-val"><input type="text" name="name" id="clinicalVersion" value="" data-mini="true" /></td>
+					<td class="form-label" >Clinical Version</td>
+					<td class="form-field-val"><div data-role="fieldcontain"><input type="text" name="name" id="clinicalVersion" value="" data-mini="true" /></div></td>
 				</tr>
 				<tr>
 					<td class="form-label">Server URL</td>
-					<td class="form-field-val"><input type="text" name="name" id="serverURL" value="" data-mini="true" /></td>
+					<td class="form-field-val"><div data-role="fieldcontain"><input type="text" name="name" id="serverURL" value="" data-mini="true" /></div></td>
 				</tr>
 				<tr>
-					<td colspan="2"><a data-role="button" data-theme="b" data-inline="true" class="ag-btn" href="javascript:void(0);" id="downloadbtn"  onclick = "saveSettings()">Save</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a data-role="button" data-theme="b" data-inline="true" class="ag-btn" href="javascript:void(0);" id="downloadbtn"  onclick = "AgClinicalMobileUtil.showHomePage()">Cancel</a></td>
+					<td colspan="2" align="center"><a data-role="button" data-theme="b" data-inline="true" class="ag-btn" href="javascript:void(0);" id="downloadbtn"  onclick = "saveSettings()">Save</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a data-role="button" data-theme="b" data-inline="true" class="ag-btn" href="javascript:void(0);" id="downloadbtn"  onclick = "AgClinicalMobileUtil.showHomePage()">Cancel</a></td>
 				</tr>
 			</table>
 		</center>
